--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,8 +18,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
