--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
     "rimraf": "^3.0.2",
     "tsc": "^2.0.4",
     "tsc-watch": "^5.0.3",
