--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -22,11 +22,15 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "react-router-dom": "^6.5.0",
     "reflect-metadata": "^0.1.13",
+    "router": "^1.3.7",
     "typeorm": "^0.3.11"
   },
   "description": ""
