--- a/FrontEnd/my-app/package.json
+++ b/FrontEnd/my-app/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-summernote": "^2.0.2",
     "react-toastify": "^9.1.1",
+    "react-tooltip": "^5.3.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
